--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.94.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
@@ -25,6 +26,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
+    "pdfjs-dist": "^5.4.624",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
